kubernetes/namespaces/base/network-system/dex-k8s-authenticator/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/networking.istio.io/virtualservice_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex-k8s-authenticator
  namespace: network-system
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'login.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: '/'
      route:
        - destination:
            port:
              number: 5555
            host: dex-k8s-authenticator.network-system.svc.cluster.local
